--- a/src/Main.css
+++ b/src/Main.css
@@ -79,3 +79,67 @@
     font-weight: 600;
     font-size: 12px;
 }
+
+.title {
+    font-size: 23px;
+    font-weight: 700;
+}
+
+.daily-item {
+    font-size: 14px;
+    height: 40px;
+    align-items: center;
+    display: flex;
+    margin: 5px;
+    cursor: pointer;
+    padding: 5px 20px;
+    border-radius: 15px;
+    background-color: #f5f5f5;
+}
+
+.icon-small {
+    width: 40px;
+}
+
+.day {
+    color: #212121;
+    flex: 1 1;
+    font-weight: 600;
+    margin-left: 15px;
+}
+
+.description {
+    flex: 1 1;
+    margin-right: 15px;
+    text-align: right;
+}
+
+.min-max {
+    color: #757575;
+}
+
+.daily-details-grid {
+    display: grid;
+    grid-row-gap: 0;
+    grid-column-gap: 15px;
+    column-gap: 15px;
+    row-gap: 0;
+    flex: 1 1;
+    grid-template-columns: auto auto;
+    padding: 5px 15px;
+}
+
+.daily-details-grid-item {
+    display: flex;
+    height: 30px;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.daily-details-grid-item label:first-child {
+    color: #757575;
+}
+
+.daily-details-grid-item label:last-child {
+    color: #212121;
+}
